// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName= , rightShadowClassName=  1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName=custom_className, rightShadowClassName=custom_className 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left custom_className"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right custom_className"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName=custom_className, rightShadowClassName=undefined 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left custom_className"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName=null, rightShadowClassName=null 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName=undefined, rightShadowClassName=custom_className 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right custom_className"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows user classes. leftShadowClassName=undefined, rightShadowClassName=undefined 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows visibility. isLeftVisible=false, isRightVisible=false 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows visibility. isLeftVisible=false, isRightVisible=true 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows visibility. isLeftVisible=true, isRightVisible=false 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent Snapshots with different shadows visibility. isLeftVisible=true, isRightVisible=true 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedFromInvisibleToVisible, rightEdgeState=AnimatedInvisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedFromVisibleToInvisible, rightEdgeState=AnimatedInvisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedInvisible, rightEdgeState=AnimatedFromInvisibleToVisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedInvisible, rightEdgeState=AnimatedFromVisibleToInvisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedInvisible, rightEdgeState=AnimatedInvisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=AnimatedInvisible, rightEdgeState=AnimatedInvisible 2`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=Invisible, rightEdgeState=Invisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=Invisible, rightEdgeState=Visible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left controls-ColumnScrollReact__shadow_visible js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;

exports[`ControlsUnit/columnScrollReact/ShadowsComponent with context and consumer. shadows for different edges state(only valid edges state variants). leftEdgeState=Visible, rightEdgeState=Invisible 1`] = `
<DocumentFragment>
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_left js-controls-ColumnScrollReact_offsetForFixed_guid123"
    data-qa="ColumnScrollReact__shadow_left"
  />
  <div
    class="controls-ColumnScrollReact__shadow controls-ColumnScrollReact__shadow_right controls-ColumnScrollReact__shadow_visible"
    data-qa="ColumnScrollReact__shadow_right"
  />
</DocumentFragment>
`;
